--- a/images_convert.ipynb
+++ b/images_convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "Collapsed": "false"
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "Collapsed": "false"
    },
@@ -115,15 +115,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/manual/reddit/dataisugly/6p43be.svg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -252,30 +244,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/manual/reddit/dataisugly/7kwcjs.webp\n",
-      "images/manual/reddit/dataisugly/2m3j1g.webp\n",
-      "images/manual/reddit/dataisugly/e2ar2p.webp\n",
-      "images/manual/reddit/dataisugly/3jdi3b.webp\n",
-      "images/manual/reddit/dataisugly/2ukujp.webp\n",
-      "images/manual/reddit/dataisugly/450llb.webp\n",
-      "images/manual/reddit/dataisugly/23v599.webp\n",
-      "images/manual/reddit/dataisugly/22ggjc.webp\n",
-      "images/manual/reddit/dataisugly/2lzddu/2lzddu-1.webp\n",
-      "images/manual/reddit/dataisugly/561ytm/561ytm-2.webp\n",
-      "images/manual/reddit/dataisugly/561ytm/561ytm-3.webp\n",
-      "images/manual/reddit/dataisugly/561ytm/561ytm-5.webp\n",
-      "images/manual/reddit/dataisugly/561ytm/561ytm-1.webp\n",
-      "images/manual/reddit/dataisugly/561ytm/561ytm-4.webp\n",
-      "images/manual/reddit/dataisugly/6238pm/6238pm-1.webp\n",
-      "images/manual/reddit/dataisugly/6238pm/6238pm-2.webp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -317,72 +286,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/manual/reddit/dataisugly/5vtdrz.jpeg\n",
-      "images/manual/reddit/dataisugly/972api.jpeg\n",
-      "images/manual/reddit/dataisugly/3u3ew3.jpeg\n",
-      "images/manual/reddit/dataisugly/2elizo.jpeg\n",
-      "images/manual/reddit/dataisugly/6elnpd.jpeg\n",
-      "images/manual/reddit/dataisugly/9k9fqr.jpeg\n",
-      "images/manual/reddit/dataisugly/35pif6.jpeg\n",
-      "images/manual/reddit/dataisugly/44ycxv.jpeg\n",
-      "images/manual/reddit/dataisugly/1x7uwd.jpeg\n",
-      "images/manual/reddit/dataisugly/2ukujp.jpeg\n",
-      "images/manual/reddit/dataisugly/4xdhtr.jpeg\n",
-      "images/manual/reddit/dataisugly/7hyjo3.jpeg\n",
-      "images/manual/reddit/dataisugly/9xcv7h.jpeg\n",
-      "images/manual/reddit/dataisugly/9lg7wg.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr.jpeg\n",
-      "images/manual/reddit/dataisugly/208ry2.jpeg\n",
-      "images/manual/reddit/dataisugly/2dab8r.jpeg\n",
-      "images/manual/reddit/dataisugly/2i48do.jpeg\n",
-      "images/manual/reddit/dataisugly/2w3xbz.jpeg\n",
-      "images/manual/reddit/dataisugly/99bczz/99bczz-3.jpeg\n",
-      "images/manual/reddit/dataisugly/99bczz/99bczz-4.jpeg\n",
-      "images/manual/reddit/dataisugly/99bczz/99bczz-1.jpeg\n",
-      "images/manual/reddit/dataisugly/99bczz/99bczz-2.jpeg\n",
-      "images/manual/reddit/dataisugly/2lzddu/2lzddu-2.jpeg\n",
-      "images/manual/reddit/dataisugly/68scgb/68scgb-20.jpeg\n",
-      "images/manual/reddit/dataisugly/68scgb/68scgb-12.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-3.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-15.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-6.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-2.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-14.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-25.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-12.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-28.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-10.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-4.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-8.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-21.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-29.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-11.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-26.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-17.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-13.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-20.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-27.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-24.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-18.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-5.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-30.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-7.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-9.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-1.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-19.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-22.jpeg\n",
-      "images/manual/reddit/dataisugly/2nwubr/2nwubr-23.jpeg\n",
-      "images/manual/reddit/dataisugly/683b4i/683b4i-2.jpeg\n",
-      "images/manual/reddit/dataisugly/683b4i/683b4i-1.jpeg\n",
-      "images/manual/reddit/dataisugly/683b4i/683b4i-3.jpeg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# id: '2w19o1' downloaded from 'http://i.imgur.com/GE7LJR6.pngh' as .pngh\n",
     "\n",
@@ -412,15 +316,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/manual/reddit/dataisugly/.DS_Store\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# id: '4f927p' downloaded from 'http://imgur.com/(null)' as '4f927p(null'\n",
     "\n",
@@ -473,7 +369,7 @@
    "outputs": [],
    "source": [
     "# Error digesting image: 63027680638.jpg Corrupt EXIF data.  Expecting to read 2 bytes but only got 0.\n",
-    "im = Image.open('images/preview/tumblr/wtf-viz/63027680638.jpg')\n",
+    "# im = Image.open('images/preview/tumblr/wtf-viz/63027680638.jpg')\n",
     "# piexif.remove('images/preview/tumblr/wtf-viz/63027680638.jpg')"
    ]
   },
@@ -486,7 +382,7 @@
    "outputs": [],
    "source": [
     "# Error digesting image: 63027680638.jpg Corrupt EXIF data.  Expecting to read 2 bytes but only got 0.\n",
-    "im = Image.open('images/thumbnail/tumblr/wtf-viz/63027680638.jpg')\n",
+    "# im = Image.open('images/thumbnail/tumblr/wtf-viz/63027680638.jpg')\n",
     "# piexif.remove('images/thumbnail/tumblr/wtf-viz/63027680638.jpg')"
    ]
   },
@@ -501,7 +397,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2766: DecompressionBombWarning: Image size (135364608 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2800: DecompressionBombWarning: Image size (135364608 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
       "  DecompressionBombWarning,\n"
      ]
     }
@@ -524,7 +420,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2766: DecompressionBombWarning: Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2800: DecompressionBombWarning: Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
       "  DecompressionBombWarning,\n"
      ]
     }
@@ -547,7 +443,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:960: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
       "  \"Palette images with Transparency expressed in bytes should be \"\n"
      ]
     }
@@ -585,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
