--- a/images_recover.ipynb
+++ b/images_recover.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import requests_cache\n",
-    "requests_cache.install_cache('archive_cache')"
+    "requests_cache.install_cache('web_cache/archive')"
    ]
   },
   {
@@ -36,6 +36,8 @@
     "import time\n",
     "from collections import Counter\n",
     "\n",
+    "from lib.parallel import parallel\n",
+    "\n",
     "from IPython.display import JSON"
    ]
   },
@@ -50,8 +52,12 @@
     "mongo = MongoClient('172.17.0.1', 27017)\n",
     "db = mongo['bad-vis']\n",
     "posts = db['posts']\n",
-    "imagefiles = db['imagefiles']\n",
+    "dlthumbnailresults = db['dlthumbnailresults']\n",
+    "dlpreviewresults = db['dlpreviewresults']\n",
     "dlexternalresults = db['dlexternalresults']\n",
+    "dlthumbnailaltresults = db['dlthumbnailaltresults']\n",
+    "dlpreviewaltresults = db['dlpreviewaltresults']\n",
+    "dlexternalaltresults = db['dlexternalaltresults']\n",
     "dlarchiveresults = db['dlarchiveresults']"
    ]
   },
@@ -67,14 +73,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
    "source": [
-    "invalid_image_phashes = set(json.load(open('handmade/invalid_image_phashes.json')))"
+    "# Find urls need recovery"
    ]
   },
   {
@@ -87,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "116"
+       "2360"
       ]
      },
      "execution_count": 6,
@@ -96,15 +100,32 @@
     }
    ],
    "source": [
-    "invalid_images = [{\n",
-    "    'id': i['id'],\n",
-    "    'post_id': i['post_id'],\n",
-    "    'link': posts.find_one({'post_id': i['post_id']})['external_link'],\n",
-    "    'dest': i['file_path'],\n",
-    "    'status': 'invalid_image',\n",
-    "    'request_status': 500\n",
-    "} for i in imagefiles.find() if i['phash'] in invalid_image_phashes]\n",
-    "len(invalid_images)"
+    "recover_downloads = []\n",
+    "dbs = [\n",
+    "    dlthumbnailresults,\n",
+    "    dlpreviewresults,\n",
+    "    dlexternalresults,\n",
+    "    dlthumbnailaltresults,\n",
+    "    dlpreviewaltresults,\n",
+    "    dlexternalaltresults\n",
+    "]\n",
+    "for db in dbs:\n",
+    "    recover_downloads += [p for p in db.find()\n",
+    "                          if (p['status'] == 'not_found' or\n",
+    "                           p['status'] == 'http_error' or\n",
+    "                           p['status'] == 'download_error' or\n",
+    "                           p['status'] == 'invalid_content_type' or\n",
+    "                           p['status'] == 'skip_content_type')]\n",
+    "len(recover_downloads)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "## Also recover invalid images"
    ]
   },
   {
@@ -113,25 +134,32 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "748"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "error_downloads = [p for p in dlexternalresults.find()\n",
-    "                   if not (p['status'] == 'invalid_url' or\n",
-    "                           p['status'] == 'downloaded' or\n",
-    "                           p['status'] == 'exists' or\n",
-    "                           'skip_' in p['status'])]\n",
-    "len(error_downloads)"
+    "# imagefiles = db['imagefiles']\n",
+    "# invalid_image_phashes = set(json.load(open('handmade/invalid_image_phashes.json')))\n",
+    "\n",
+    "# invalid_images = [{\n",
+    "#     'id': i['id'],\n",
+    "#     'post_id': i['post_id'],\n",
+    "#     'link': posts.find_one({'post_id': i['post_id']})['external_link'],\n",
+    "#     'dest': i['file_path'],\n",
+    "#     'status': 'invalid_image',\n",
+    "#     'request_status': 500\n",
+    "# } for i in imagefiles.find() if i['phash'] in invalid_image_phashes]\n",
+    "# len(invalid_images)\n",
+    "\n",
+    "# recover_downloads += invalid_images\n",
+    "# len(recover_downloads)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "# Test recovering"
    ]
   },
   {
@@ -140,37 +168,14 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "864"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "recover_downloads = error_downloads + invalid_images\n",
-    "len(recover_downloads)"
+    "# recover_downloads[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "# error_downloads[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {
     "Collapsed": "false"
    },
@@ -183,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "Collapsed": "false"
    },
@@ -195,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "Collapsed": "false"
    },
@@ -207,8 +212,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# Recover"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "Collapsed": "false"
    },
@@ -310,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false"
    },
@@ -321,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "Collapsed": "false"
    },
@@ -332,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "Collapsed": "false"
    },
@@ -345,22 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "def parallel (f, params_list, params_dict={}, total=None, n_jobs=-2):\n",
-    "    results = []\n",
-    "    with Parallel(n_jobs=n_jobs, require='sharedmem') as p:\n",
-    "        results = p(delayed(f)(params, **params_dict) for params in tqdm(params_list, total=total))\n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "Collapsed": "false"
    },
@@ -368,12 +367,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cc5e35532694582b0480b20f8a3a898",
+       "model_id": "3405baeea08f4ed4983587b6ca92fbcb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=864.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=2360.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -384,22 +383,29 @@
      "output_type": "stream",
      "text": [
       "Unknow content-type: application/octet-stream\n",
+      "id: 6896pd link: http://gervise.com/681-2\n",
+      "Unknow content-type: application/octet-stream\n",
       "id: 3wkmlo link: http://www.unz.com/isteve/how-many-would-emigrate-almost-7-billion-people-live-in-countries-poorer-than-us/\n",
       "Unknow content-type: application/octet-stream\n",
       "id: 3fow34 link: http://www.cdc.gov/mmwr/preview/mmwrhtml/mm6032a3.htm\n",
       "Unknow content-type: text/xml\n",
       "id: 2waaf6 link: http://www.msn.com/en-us/news/us/map-shows-loudest-and-quietest-places-in-the-us/ar-BBhGetT\n",
+      "Unknow content-type: application/octet-stream\n",
+      "id: 1oxrh5 link: http://www.badfigure.org/\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "dl_archive_results = parallel(download_image, recover_downloads, total=len(recover_downloads), params_dict={'t': 'link', 'outdir': 'archive'})"
+    "dl_archive_results = parallel(download_image,\n",
+    "                              recover_downloads,\n",
+    "                              total=len(recover_downloads),\n",
+    "                              params_dict={'t': 'link', 'outdir': 'archive'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "Collapsed": "false"
    },
@@ -407,10 +413,10 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f0f5c7c50f0>"
+       "<pymongo.results.InsertManyResult at 0x7ff493b9d140>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "Collapsed": "false"
    },
@@ -433,14 +439,15 @@
     {
      "data": {
       "text/plain": [
-       "Counter({'archive_not_found': 577,\n",
-       "         'exists': 149,\n",
-       "         'skip_content_type': 130,\n",
-       "         'invalid_content_type': 3,\n",
-       "         'archive_error': 5})"
+       "Counter({'archive_query_error': 557,\n",
+       "         'archive_not_found': 1146,\n",
+       "         'exists': 169,\n",
+       "         'downloaded': 12,\n",
+       "         'skip_content_type': 471,\n",
+       "         'invalid_content_type': 5})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
