--- a/images_thumbnail.ipynb
+++ b/images_thumbnail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "Collapsed": "false"
    },
@@ -29,7 +29,8 @@
     "from PIL import Image\n",
     "import json\n",
     "from itertools import chain\n",
-    "from pydash import pick\n",
+    "from pydash import pick, omit\n",
+    "from datetime import datetime\n",
     "\n",
     "from lib.parallel import parallel"
    ]
@@ -54,7 +55,10 @@
    },
    "outputs": [],
    "source": [
-    "!rm -r {gallery_dir}"
+    "!rm -r {gallery_dir/'preview'}\n",
+    "!rm -r {gallery_dir/'thumbnail'}\n",
+    "!rm -r {gallery_dir/'meta'}\n",
+    "!rm -r {gallery_dir/'image_lists'}"
    ]
   },
   {
@@ -66,13 +70,15 @@
    "outputs": [],
    "source": [
     "gallery_dir.mkdir(exist_ok=True)\n",
+    "\n",
     "preview_dir = gallery_dir/'preview'\n",
-    "preview_dir.mkdir(exist_ok=True)\n",
     "thumbnail_dir = gallery_dir/'thumbnail'\n",
-    "thumbnail_dir.mkdir(exist_ok=True)\n",
     "meta_dir = gallery_dir/'meta'\n",
-    "meta_dir.mkdir(exist_ok=True)\n",
     "imagelist_dir = gallery_dir/'image_lists'\n",
+    "\n",
+    "preview_dir.mkdir(exist_ok=True)\n",
+    "thumbnail_dir.mkdir(exist_ok=True)\n",
+    "meta_dir.mkdir(exist_ok=True)\n",
     "imagelist_dir.mkdir(exist_ok=True)"
    ]
   },
@@ -88,7 +94,8 @@
     "db = mongo['bad-vis']\n",
     "posts = db['posts']\n",
     "imagededup = db['imagededup']\n",
-    "visimages = db['visimages']"
+    "visimages = db['visimages']\n",
+    "vislabels = db['vislabels']"
    ]
   },
   {
@@ -121,28 +128,108 @@
    },
    "outputs": [],
    "source": [
-    "def finalize_image (image):\n",
-    "    image['image_name'] = f\"{image['id']}_{image['index_in_album']}\"\n",
-    "    image['image_path'] = str(preview_dir/f\"{image['image_name']}{image['ext']}\")\n",
-    "    copyfile(image['file_path'], image['image_path'])\n",
+    "class VisImage ():\n",
+    "    _attrs = [\n",
+    "        'id',\n",
+    "        'image_name',\n",
+    "        'image_path',\n",
+    "        'thumbnail_path',\n",
     "\n",
-    "    image['thumbnail_path'] = str(thumbnail_dir/f\"{image['image_name']}.jpg\")\n",
-    "    ratio = thumbnail_size / max([image['width'], image['height']])\n",
-    "    image['thumbnail_width'] = min([thumbnail_size, int(round(image['width'] * ratio))])\n",
-    "    image['thumbnail_height'] = min([thumbnail_size, int(round(image['height'] * ratio))])\n",
+    "        'datetime',\n",
+    "        'url',\n",
+    "        'title',\n",
+    "        'author',\n",
+    "        'source',\n",
+    "        'source_url',\n",
+    "        'source_platform',\n",
+    "        'popularity_score',\n",
     "\n",
-    "    im = Image.open(image['file_path']).convert('RGB')\n",
-    "    im.thumbnail((image['thumbnail_width'], image['thumbnail_height']))\n",
-    "    im.save(image['thumbnail_path'], 'JPEG')\n",
+    "    #     'size',\n",
+    "    #     'width',\n",
+    "    #     'height',\n",
+    "        'phash',\n",
     "\n",
-    "    del image['_id']\n",
+    "        'labels',\n",
+    "        'remarks'\n",
+    "    ]\n",
     "\n",
-    "    with open(meta_dir/f\"{image['image_name']}.json\", 'w') as f:\n",
-    "        json.dump(image, f)\n",
+    "    def __init__ (self, image):\n",
+    "        self._image = image\n",
     "\n",
-    "    visimages.insert_one(image)\n",
+    "        for k, v in image.items():\n",
+    "            if k in ['labels', 'datetime']:\n",
+    "                continue\n",
+    "            setattr(self, k, v)\n",
     "\n",
-    "    return image"
+    "    def digest (self):\n",
+    "        return {a:getattr(self, a) for a in VisImage._attrs if hasattr(self, a)}\n",
+    "\n",
+    "    @property\n",
+    "    def image_name (self):\n",
+    "        return f\"{self._image['id']}_{self._image['index_in_album']}\"\n",
+    "\n",
+    "    @property\n",
+    "    def datetime (self):\n",
+    "        return datetime.fromisoformat(self._image['datetime']).timestamp()\n",
+    "\n",
+    "    @property\n",
+    "    def visLabel (self):\n",
+    "        if not hasattr(self, '_labels'):\n",
+    "            image_ids = [self._image['image_id']] + [i for i in self._image['duplicated_images']]\n",
+    "            visLabels = [l for l in vislabels.find({'image_id': {'$in': image_ids}})]\n",
+    "            if len(visLabels) == 0:\n",
+    "                return None\n",
+    "\n",
+    "            if len(visLabels) > 1:\n",
+    "                print(f\"labels warning: more than 1 label {image_ids} {visLabels}\")\n",
+    "\n",
+    "            self._labels = visLabels[0]\n",
+    "        return self._labels\n",
+    "\n",
+    "    @property\n",
+    "    def labels (self):\n",
+    "        if not self.visLabel:\n",
+    "            return []\n",
+    "        labels = [l for l in self.visLabel['labels'] if l != 'flag:starred']\n",
+    "        if self._image.get('animated'):\n",
+    "            labels.append('layout:animated')\n",
+    "        return labels\n",
+    "\n",
+    "    @property\n",
+    "    def exclude_from_list (self):\n",
+    "        return len(self.labels) == 0 or 'flag:invalid' in self.labels or 'flag:needreview' in self.labels or 'flag:notbad' in self.labels\n",
+    "\n",
+    "    @property\n",
+    "    def remarks (self):\n",
+    "        if not self.visLabel:\n",
+    "            return ''\n",
+    "        return self.visLabel['remarks']\n",
+    "\n",
+    "    @property\n",
+    "    def image_path (self):\n",
+    "        return str(preview_dir/f\"{self.image_name}{self._image['ext']}\")\n",
+    "\n",
+    "    @property\n",
+    "    def thumbnail_path (self):\n",
+    "        return str(thumbnail_dir/f\"{self.image_name}.jpg\")\n",
+    "\n",
+    "    def makePreview (self):\n",
+    "        copyfile(self._image['file_path'], self.image_path)\n",
+    "\n",
+    "    def makeThumbnail (self):\n",
+    "        ratio = thumbnail_size / max([self._image['width'], self._image['height']])\n",
+    "        thumbnail_width = min([thumbnail_size, int(round(self._image['width'] * ratio))])\n",
+    "        thumbnail_height = min([thumbnail_size, int(round(self._image['height'] * ratio))])\n",
+    "\n",
+    "        im = Image.open(self._image['file_path']).convert('RGB')\n",
+    "        im.thumbnail((thumbnail_width, thumbnail_height))\n",
+    "        im.save(self.thumbnail_path, 'JPEG')\n",
+    "\n",
+    "    def makeMetaData (self):\n",
+    "        digest = self.digest()\n",
+    "        with open(meta_dir/f\"{self.image_name}.json\", 'w') as f:\n",
+    "            json.dump(digest, f)\n",
+    "        visimages.insert_one(digest)"
    ]
   },
   {
@@ -151,32 +238,38 @@
    "metadata": {
     "Collapsed": "false"
    },
+   "outputs": [],
+   "source": [
+    "def finalize_image (image):\n",
+    "    visImage = VisImage(image)\n",
+    "    if visImage.exclude_from_list:\n",
+    "        return None\n",
+    "    visImage.makePreview()\n",
+    "    visImage.makeThumbnail()\n",
+    "    visImage.makeMetaData()\n",
+    "    return visImage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2477401a3a6445e1be8b9c4aafcf1226",
+       "model_id": "9384c2a5e19e4a0a8bfdb4e28e0e27a2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=7249.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=5840.0), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
-      "  \"Palette images with Transparency expressed in bytes should be \"\n",
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2766: DecompressionBombWarning: Image size (135364608 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n",
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2766: DecompressionBombWarning: Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n"
-     ]
     },
     {
      "name": "stdout",
@@ -187,7 +280,18 @@
     }
    ],
    "source": [
-    "images = parallel(finalize_image, imagededup.find(), total=imagededup.estimated_document_count())"
+    "visImages = parallel(finalize_image, imagededup.find(), total=imagededup.estimated_document_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "visImages = [i for i in visImages if i]"
    ]
   },
   {
@@ -201,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false"
    },
@@ -212,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "Collapsed": "false"
    },
@@ -223,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "Collapsed": "false"
    },
@@ -234,59 +338,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "attrs = [\n",
-    "    'id',\n",
-    "    'image_name',\n",
-    "    'image_path',\n",
-    "    'thumbnail_path',\n",
-    "\n",
-    "    'datetime',\n",
-    "    'url',\n",
-    "    'title',\n",
-    "    'author',\n",
-    "    'source',\n",
-    "    'source_url',\n",
-    "    'source_platform',\n",
-    "    'popularity_score',\n",
-    "\n",
-    "    'size',\n",
-    "    'width',\n",
-    "    'height',\n",
-    "    'phash',\n",
-    "\n",
-    "    'animated',\n",
-    "    'tags',\n",
-    "    'labels',\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(len(visImages)):\n",
-    "    del visImages[i]['_id']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "visImages = [pick(i, *attrs) for i in visImages]"
+    "len(visImages)"
    ]
   },
   {
@@ -297,12 +366,24 @@
    },
    "outputs": [],
    "source": [
-    "json.dump({'images': visImages}, open(imagelist_dir/'all.json', 'w'), separators=(',', ':'))"
+    "for i in visImages:\n",
+    "    del i['_id']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "json.dump({'images': visImages}, open(imagelist_dir/'all.json', 'w'), separators=(',', ':'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "Collapsed": "false"
    },
@@ -322,12 +403,113 @@
     "Collapsed": "false"
    },
    "source": [
+    "# Labels Options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "labelOptions = [{\n",
+    "    'tag': 'fault',\n",
+    "    'name': 'Issues',\n",
+    "    'options': [\n",
+    "        'percentage:sum', 'percentage:encoding', 'percentage:wholepart',\n",
+    "        'label', 'description',\n",
+    "        'axis', 'axis:label', 'axis:flipped', 'axis:truncated', \"axis:missing\", 'axis:double', # axis:dual\n",
+    "        'legend',\n",
+    "        'color', 'color:over12',\n",
+    "        'scale', 'scale:log', 'scale:inconsistent', 'binning',\n",
+    "        'area',\n",
+    "        'picto:distortion', 'picto:area',\n",
+    "        'position', 'itemorder',\n",
+    "        'connection',\n",
+    "        '3d', 'animation',\n",
+    "        'cluttering', 'occulusion',\n",
+    "        'data', 'data:selective', 'data:questionable', 'data:missingvalues', 'data:redundant', 'data:prediction',\n",
+    "        'index:comparison', # index:crossbasiscomparison\n",
+    "        'parody', 'faultylogic', 'missingcontext',\n",
+    "        'confirmationbias', 'chartjunk', 'betteralternative',\n",
+    "        'faultystatistics', 'invalidcomparison',\n",
+    "        'map:population', 'invalidencoding',\n",
+    "        'unreadable', 'visuallyawful',\n",
+    "        'encoding', 'cannotaddup', 'legibility'\n",
+    "    ]}, {\n",
+    "    'tag': 'form',\n",
+    "    'name': 'Chart Type',\n",
+    "    'options': [\n",
+    "        'barchart', 'linechart', 'scatterplot', 'dotplot', 'barcodechart', 'areachart', 'histogram',\n",
+    "        'nodelink', 'radarchart', 'bubblechart', 'dumbbellplot',\n",
+    "        'piechart', 'donutchart',\n",
+    "        'pyramid', 'venn', 'choropleth', 'flowmap', 'map', 'chernoffface',\n",
+    "        'table', 'heatmap', 'treemap', 'quadrant',\n",
+    "        'boxplot', 'violinplot', 'parallelcoor', 'streamgraph',\n",
+    "        'pictogram', 'guagechart', 'sankeydiagram', 'chorddiagram', 'sunbrust', 'voronoi',\n",
+    "        'unknown'\n",
+    "    ]}, {\n",
+    "    'tag': 'data',\n",
+    "    'name': 'Data Types',\n",
+    "    'options': [\n",
+    "        'categorical', 'quantitative', 'indexvalue', 'accumulated',\n",
+    "        'percentage', 'probability',\n",
+    "        'ordinal', 'ranking', 'sequential',\n",
+    "        'timeseries', 'cyclic',\n",
+    "        'geospatial', 'flow',\n",
+    "        'network', 'tree',\n",
+    "        'set', 'bitmap',\n",
+    "        'text', 'multivariate',\n",
+    "    ]}, {\n",
+    "    'tag': 'media',\n",
+    "    'name': 'Medium',\n",
+    "    'options': [\n",
+    "        'inreallife', 'printed', 'handdrawn', 'tv', 'ads', 'news', 'NSFW'\n",
+    "    ]}, {\n",
+    "    'tag': 'layout',\n",
+    "    'name': 'Layout',\n",
+    "    'options': [\n",
+    "        'circular', 'infographics', 'stacked', 'map', 'juxtaposition', 'overlay', 'mixed'\n",
+    "    ]}, {\n",
+    "    'tag': 'metaphor',\n",
+    "    'name': 'Metaphor',\n",
+    "    'options': [\n",
+    "        'pictograph', 'periodictable', 'gear', 'clock'\n",
+    "    ]}, {\n",
+    "    'tag': 'flag',\n",
+    "    'name': 'Flag',\n",
+    "    'options': [\n",
+    "        'needreview', 'invalid', 'notbad', 'starred'\n",
+    "    ]}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "# dump all tags but flag\n",
+    "json.dump(labelOptions[:-1], open(imagelist_dir/f\"labelOptions.json\", 'w'), separators=(',', ':'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
     "# Sprite"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "Collapsed": "false"
    },
