--- a/notebooks/images_thumbnail.ipynb
+++ b/notebooks/images_thumbnail.ipynb
@@ -414,76 +414,76 @@
    },
    "outputs": [],
    "source": [
-    "labelOptions = [{\n",
-    "    'tag': 'fault',\n",
-    "    'name': 'Issues',\n",
-    "    'options': [\n",
-    "        'percentage:sum', 'percentage:encoding', 'percentage:wholepart',\n",
-    "        'label', 'description',\n",
-    "        'axis', 'axis:label', 'axis:flipped', 'axis:truncated', \"axis:missing\", 'axis:double', # axis:dual\n",
-    "        'legend',\n",
-    "        'color', 'color:over12',\n",
-    "        'scale', 'scale:log', 'scale:inconsistent', 'binning',\n",
-    "        'area',\n",
-    "        'picto:distortion', 'picto:area',\n",
-    "        'position', 'itemorder',\n",
-    "        'connection',\n",
-    "        '3d', 'animation',\n",
-    "        'cluttering', 'occulusion',\n",
-    "        'data', 'data:selective', 'data:questionable', 'data:missingvalues', 'data:redundant', 'data:prediction',\n",
-    "        'index:comparison', # index:crossbasiscomparison\n",
-    "        'parody', 'faultylogic', 'missingcontext',\n",
-    "        'confirmationbias', 'chartjunk', 'betteralternative',\n",
-    "        'faultystatistics', 'invalidcomparison',\n",
-    "        'map:population', 'invalidencoding',\n",
-    "        'unreadable', 'visuallyawful',\n",
-    "        'encoding', 'cannotaddup', 'legibility'\n",
-    "    ]}, {\n",
-    "    'tag': 'form',\n",
-    "    'name': 'Chart Type',\n",
-    "    'options': [\n",
-    "        'barchart', 'linechart', 'scatterplot', 'dotplot', 'barcodechart', 'areachart', 'histogram',\n",
-    "        'nodelink', 'radarchart', 'bubblechart', 'dumbbellplot',\n",
-    "        'piechart', 'donutchart',\n",
-    "        'pyramid', 'venn', 'choropleth', 'flowmap', 'map', 'chernoffface',\n",
-    "        'table', 'heatmap', 'treemap', 'quadrant',\n",
-    "        'boxplot', 'violinplot', 'parallelcoor', 'streamgraph',\n",
-    "        'pictogram', 'guagechart', 'sankeydiagram', 'chorddiagram', 'sunbrust', 'voronoi',\n",
-    "        'unknown'\n",
-    "    ]}, {\n",
-    "    'tag': 'data',\n",
-    "    'name': 'Data Types',\n",
-    "    'options': [\n",
-    "        'categorical', 'quantitative', 'indexvalue', 'accumulated',\n",
-    "        'percentage', 'probability',\n",
-    "        'ordinal', 'ranking', 'sequential',\n",
-    "        'timeseries', 'cyclic',\n",
-    "        'geospatial', 'flow',\n",
-    "        'network', 'tree',\n",
-    "        'set', 'bitmap',\n",
-    "        'text', 'multivariate',\n",
-    "    ]}, {\n",
-    "    'tag': 'media',\n",
-    "    'name': 'Medium',\n",
-    "    'options': [\n",
-    "        'inreallife', 'printed', 'handdrawn', 'tv', 'ads', 'news', 'NSFW'\n",
-    "    ]}, {\n",
-    "    'tag': 'layout',\n",
-    "    'name': 'Layout',\n",
-    "    'options': [\n",
-    "        'circular', 'infographics', 'stacked', 'map', 'juxtaposition', 'overlay', 'mixed'\n",
-    "    ]}, {\n",
-    "    'tag': 'metaphor',\n",
-    "    'name': 'Metaphor',\n",
-    "    'options': [\n",
-    "        'pictograph', 'periodictable', 'gear', 'clock'\n",
-    "    ]}, {\n",
-    "    'tag': 'flag',\n",
-    "    'name': 'Flag',\n",
-    "    'options': [\n",
-    "        'needreview', 'invalid', 'notbad', 'starred'\n",
-    "    ]}\n",
-    "]"
+    "# labelOptions = [{\n",
+    "#     'tag': 'fault',\n",
+    "#     'name': 'Issues',\n",
+    "#     'options': [\n",
+    "#         'percentage:sum', 'percentage:encoding', 'percentage:wholepart',\n",
+    "#         'label', 'description',\n",
+    "#         'axis', 'axis:label', 'axis:flipped', 'axis:truncated', \"axis:missing\", 'axis:double', # axis:dual\n",
+    "#         'legend',\n",
+    "#         'color', 'color:over12',\n",
+    "#         'scale', 'scale:log', 'scale:inconsistent', 'binning',\n",
+    "#         'area',\n",
+    "#         'picto:distortion', 'picto:area',\n",
+    "#         'position', 'itemorder',\n",
+    "#         'connection',\n",
+    "#         '3d', 'animation',\n",
+    "#         'cluttering', 'occulusion',\n",
+    "#         'data', 'data:selective', 'data:questionable', 'data:missingvalues', 'data:redundant', 'data:prediction',\n",
+    "#         'index:comparison', # index:crossbasiscomparison\n",
+    "#         'parody', 'faultylogic', 'missingcontext',\n",
+    "#         'confirmationbias', 'chartjunk', 'betteralternative',\n",
+    "#         'faultystatistics', 'invalidcomparison',\n",
+    "#         'map:population', 'invalidencoding',\n",
+    "#         'unreadable', 'visuallyawful',\n",
+    "#         'encoding', 'cannotaddup', 'legibility'\n",
+    "#     ]}, {\n",
+    "#     'tag': 'form',\n",
+    "#     'name': 'Chart Type',\n",
+    "#     'options': [\n",
+    "#         'barchart', 'linechart', 'scatterplot', 'dotplot', 'barcodechart', 'areachart', 'histogram',\n",
+    "#         'nodelink', 'radarchart', 'bubblechart', 'dumbbellplot',\n",
+    "#         'piechart', 'donutchart',\n",
+    "#         'pyramid', 'venn', 'choropleth', 'flowmap', 'map', 'chernoffface',\n",
+    "#         'table', 'heatmap', 'treemap', 'quadrant',\n",
+    "#         'boxplot', 'violinplot', 'parallelcoor', 'streamgraph',\n",
+    "#         'pictogram', 'guagechart', 'sankeydiagram', 'chorddiagram', 'sunbrust', 'voronoi',\n",
+    "#         'unknown'\n",
+    "#     ]}, {\n",
+    "#     'tag': 'data',\n",
+    "#     'name': 'Data Types',\n",
+    "#     'options': [\n",
+    "#         'categorical', 'quantitative', 'indexvalue', 'accumulated',\n",
+    "#         'percentage', 'probability',\n",
+    "#         'ordinal', 'ranking', 'sequential',\n",
+    "#         'timeseries', 'cyclic',\n",
+    "#         'geospatial', 'flow',\n",
+    "#         'network', 'tree',\n",
+    "#         'set', 'bitmap',\n",
+    "#         'text', 'multivariate',\n",
+    "#     ]}, {\n",
+    "#     'tag': 'media',\n",
+    "#     'name': 'Medium',\n",
+    "#     'options': [\n",
+    "#         'inreallife', 'printed', 'handdrawn', 'tv', 'ads', 'news', 'NSFW'\n",
+    "#     ]}, {\n",
+    "#     'tag': 'layout',\n",
+    "#     'name': 'Layout',\n",
+    "#     'options': [\n",
+    "#         'circular', 'infographics', 'stacked', 'map', 'juxtaposition', 'overlay', 'mixed'\n",
+    "#     ]}, {\n",
+    "#     'tag': 'metaphor',\n",
+    "#     'name': 'Metaphor',\n",
+    "#     'options': [\n",
+    "#         'pictograph', 'periodictable', 'gear', 'clock'\n",
+    "#     ]}, {\n",
+    "#     'tag': 'flag',\n",
+    "#     'name': 'Flag',\n",
+    "#     'options': [\n",
+    "#         'needreview', 'invalid', 'notbad', 'starred'\n",
+    "#     ]}\n",
+    "# ]"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "outputs": [],
    "source": [
     "# dump all tags but flag\n",
-    "json.dump(labelOptions[:-1], open(imagelist_dir/f\"labelOptions.json\", 'w'), separators=(',', ':'))"
+    "# json.dump(labelOptions[:-1], open(imagelist_dir/f\"labelOptions.json\", 'w'), separators=(',', ':'))"
    ]
   },
   {
